# EzTerm

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  ezterm.h
doc/: KEY.md
include/: ezterm.h
src/: ezterm.cpp
test/: Color_test.cpp  Mouse_test.cpp  bit.cpp  hanoi  hanoi.cpp  key_test.cpp  ncurses_test.cpp  rolling.cpp  test.out
